white space fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,12 +3,17 @@
 
 
 * {
-    margin: 0;
+        margin: 0;
+        padding: 0;
+        border: 0;
+        outline: 0;
+        font-size: 100%;
+        vertical-align: baseline;
+        background: transparent;
 }
 
 body{
-    background-color: #000000;
-    background: linear-gradient(145.9deg, #000000 10%, #120035 100%);
+    background: linear-gradient(145.9deg, #000000 10%, #120035 100%), #000000;
     font-family: 'Space Grotesk';
     color: #ffffff;
     max-width: 1250px;
